--- a/notes-app-client/public/index.html
+++ b/notes-app-client/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Serif|Open+Sans:300,400,600,700,800">
+    
+    <title>Serverlsess Notes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
