--- a/notes-app-client/public/index.html
+++ b/notes-app-client/public/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Serif|Open+Sans:300,400,600,700,800">
     
     <title>Serverlsess Notes</title>
+    <script src="https://js.stripe.com/v3/"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
